<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proverb"
        android:textStyle="bold"/>
    <View
        android:layout_width="30dp"
        android:layout_height="1dp"
        android:background="#9d9a9a"
        android:layout_marginBottom="4dp"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#e2efd7d7"
        android:foregroundGravity="center">
        <TextView
            android:id="@+id/proverb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            tools:text="This is a test text"
            android:padding="7dp"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/literal_translation"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />
    <View
        android:layout_width="85dp"
        android:layout_height="1dp"
        android:layout_gravity="end"
        android:background="#9d9a9a"
        android:layout_marginBottom="4dp"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:cardBackgroundColor="#dba7a7">
        <TextView
            android:id="@+id/meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:padding="7dp"
            tools:text="This is a test text"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/explanation_usage"
        android:layout_marginTop="30dp" />
    <View
        android:layout_width="95dp"
        android:layout_height="1dp"
        android:background="#9d9a9a"
        android:layout_marginBottom="4dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginBottom="1dp"
        app:cardBackgroundColor="#C67A7A">
        <TextView
            android:id="@+id/explanation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="This is a test text"
            android:padding="7dp"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>