<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
                android:id="@+id/cd"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="7dp">

                <TextView
                    android:gravity="center"
                    android:text="@string/the_good_person"
                    android:textColor="#690F22"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button" />
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_short_text_black_24dp"/>/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
                android:id="@+id/cd2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="7dp">

                <TextView
                    android:gravity="center"
                    android:textColor="#690F22"
                    android:text="@string/the_good_life"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button" />
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_short_text_black_24dp"/>/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
                android:id="@+id/cd3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="7dp">

                <TextView
                    android:gravity="center"
                    android:text="@string/relationship"
                    android:textSize="16sp"
                    android:textColor="#690F22"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button" />
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_short_text_black_24dp"/>/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
                android:id="@+id/cd4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="7dp">

                <TextView
                    android:gravity="center"
                    android:text="@string/human_nature"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:textColor="#690F22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button" />
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_short_text_black_24dp"/>/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
                android:id="@+id/cd5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="7dp">

                <TextView
                    android:gravity="center"
                    android:text="@string/rights_and_responsibilities"
                    android:textSize="16sp"
                    android:textColor="#690F22"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button" />
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_short_text_black_24dp"/>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
                android:id="@+id/cd6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="7dp">

            <TextView
                android:gravity="center"
                android:text="@string/truism"
                android:textSize="16sp"
                android:textColor="#690F22"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button" />
            <ImageView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_short_text_black_24dp"/>/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>




<!--
<TextView
android:id="@+id/section_label"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="@dimen/activity_vertical_margin"
android:layout_marginEnd="@dimen/activity_horizontal_margin"
android:layout_marginStart="@dimen/activity_horizontal_margin"
android:layout_marginTop="@dimen/activity_vertical_margin"
app:layout_constraintLeft_toLeftOf="parent"
app:layout_constraintTop_toTopOf="@+id/constraintLayout"
tools:layout_constraintLeft_creator="1"
tools:layout_constraintTop_creator="1" />

 <TextView
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_text"
        android:textColor="#847779"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

        <TextView
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="Welcome!"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">

-->

